[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/Levels.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Log.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/UpMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/BackgroundParticle.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Background.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Bow.tscn" type="PackedScene" id=6]
[ext_resource path="res://Other Assets/04B_30__.TTF" type="FontFile" id=7]
[ext_resource path="res://Scripts/GameManager.gd" type="Script" id=8]
[ext_resource path="res://Scenes/FadeTransitionCanvas.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/TapToContinue.tscn" type="PackedScene" id=10]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.5 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "normal"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="FontFile" id=1]
size = 12
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="MainScene" type="Node2D"]

[node name="GameManager" type="Node2D" parent="."]
script = ExtResource( 8 )
level = 3
left_arrows = 10

[node name="Background" parent="." instance=ExtResource( 5 )]

[node name="GPUParticles2D" parent="." instance=ExtResource( 4 )]

[node name="Bow" parent="." instance=ExtResource( 6 )]
position = Vector2( 150, 440 )

[node name="ArrowHolder" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="ArrowHolder"]
anims/RESET = SubResource( 3 )
anims/fade_out = SubResource( 4 )
anims/normal = SubResource( 5 )

[node name="Log" parent="." instance=ExtResource( 2 )]
position = Vector2( 150, 120 )

[node name="ArrowCounter" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 19.0
offset_top = 457.0
offset_right = 49.0
offset_bottom = 487.0
theme = SubResource( 2 )
align = 1
valign = 1

[node name="UpMenu" parent="." instance=ExtResource( 3 )]
visible = false

[node name="GUI" parent="." instance=ExtResource( 1 )]
visible = false

[node name="TapToContinue" parent="." instance=ExtResource( 10 )]
offset_top = 250.0
offset_bottom = 250.0

[node name="FadeTransitionCanvas" parent="." instance=ExtResource( 9 )]
